# fama

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  README_zh-CN.md  WORKFLOW.md  install.sh
.1code/: worktree.json
.claude/: settings.json
.github/workflows/: build-clang-wasm.yml  ci.yml  release.yml
biome-binding/: Cargo.toml
biome-binding/src/: lib.rs
biome-web-formatter/: Cargo.toml
cli/: Cargo.toml  build.rs
cli/src/: color.rs  discovery.rs  editorconfig.rs  formatter.rs  git.rs  main.rs
cli/tests/: integration_tests.rs
common/src/: lib.rs
dprint-formatter/: Cargo.toml
fama/: Cargo.toml
fama-common/: Cargo.toml
fama-common/src/: lib.rs
fama/src/: discovery.rs  main.rs
formatters/biome/: Cargo.toml
formatters/biome/src/: lib.rs
formatters/clang/: Cargo.toml  README.md  build-wasm.sh  fetch-wasm.sh
formatters/clang/src/: lib.rs
formatters/clang/wasm/: clang-format.wasm
formatters/dart/: Cargo.toml  build.rs  fetch_binary.sh
formatters/dart/src/: lib.rs
formatters/dockerfile/: Cargo.toml
formatters/dockerfile/src/: lib.rs
formatters/dprint/: Cargo.toml
formatters/dprint/src/: lib.rs
formatters/goffi/: Cargo.toml  build.rs  libgoffi.h
formatters/goffi/go/: formatter.go  go.mod  go.sum  libgoffi.h  protoformat.go
formatters/goffi/src/: lib.rs
formatters/kotlin/: Cargo.toml
formatters/kotlin/queries/: kotlin.scm
formatters/kotlin/src/: lib.rs
formatters/lua/: Cargo.toml
formatters/lua/src/: lib.rs
formatters/php/: Cargo.toml
formatters/php/src/: lib.rs
formatters/process/: Cargo.toml
formatters/process/src/: lib.rs
formatters/python/: Cargo.toml
formatters/python/src/: lib.rs
formatters/ruby/: Cargo.toml
formatters/ruby/src/: lib.rs
formatters/rustfmt/: Cargo.toml
formatters/rustfmt/src/: lib.rs
formatters/shfmt/: Cargo.toml  build.rs
formatters/shfmt/go/: formatter.go  libshformatter.dylib  libshformatter.h
formatters/shfmt/src/: lib.rs
formatters/sqruff/: Cargo.toml
formatters/sqruff/src/: lib.rs
formatters/toml/: Cargo.toml
formatters/toml/src/: lib.rs
formatters/xml/: Cargo.toml
formatters/xml/src/: lib.rs
formatters/zigffi/: Cargo.toml  build.rs
formatters/zigffi/src/: lib.rs
formatters/zigffi/zig/: build.zig  root.zig
kotlin-formatter/: Cargo.toml
kotlin-formatter/src/: lib.rs
lua-formatter/: Cargo.toml
ruff-formatter/: Cargo.toml
ruff-formatter/src/: lib.rs
rust-formatter/: Cargo.toml
rust-formatter/src/: lib.rs
sh-formatter/: Cargo.toml  build.rs  libshformatter.dylib
sh-formatter-go/: go.mod  libshformatter.dylib  libshformatter.h
sh-formatter-go/.omc/state/: subagent-tracking.json
sh-formatter/src/: lib.rs
test-project/: .editorconfig  README.md  index.html  package-lock.json  package.json
test-project/src/test-files/: test.astro  test.css  test.html  test.js  test.jsx  test.less  test.md  test.scss  test.svelte  test.ts  test.tsx  test.vue  test.yaml
test-python-format/: example.py
