[workspace]
members = [
    "cli",
    "common",
    "formatters/biome",
    "formatters/dprint",
    "formatters/rustfmt",
    "formatters/python",
    "formatters/lua",
    "formatters/shfmt",
]
resolver = "2"

[workspace.dependencies]
# For workspace members that reference each other, use path dependencies

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
