[workspace]
members = [
	"cli",
	"common",
	"formatters/biome",
	"formatters/clang",
	"formatters/dprint",
	"formatters/toml",
	"formatters/rustfmt",
	"formatters/python",
	"formatters/lua",
	"formatters/goffi",
	"formatters/zigffi",
	"formatters/dockerfile",
	"formatters/sqruff",
	"formatters/xml",
	"formatters/ruby",
	"formatters/php",
]
resolver = "2"

[workspace.dependencies]
# For workspace members that reference each other, use path dependencies

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
