[package]
name = "fama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
biome = { path = "../formatters/biome" }
dprint = { path = "../formatters/dprint" }
toml-fmt = { path = "../formatters/toml" }
rustfmt = { path = "../formatters/rustfmt" }
ruff = { path = "../formatters/python" }
stylua = { path = "../formatters/lua", package = "stylua" }
goffi = { path = "../formatters/goffi", package = "goffi" }
dockerfile = { path = "../formatters/dockerfile" }
fama-sqruff = { path = "../formatters/sqruff" }
xml-fmt = { path = "../formatters/xml" }
ruby-fmt = { path = "../formatters/ruby" }
php-fmt = { path = "../formatters/php", package = "fama-php" }
fama-common = { path = "../common" }
ignore = "0.4"
glob = "0.3"
clap = { version = "4.5", features = [ "derive" ] }
anyhow = "1.0"
rayon = "1.11"
pathdiff = "0.2"

[[bin]]
name = "fama"
path = "src/main.rs"
