[package]
name = "fama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
biome_web_formatter = { path = "../biome-web-formatter", package = "biome-web-formatter" }
dprint-formatter = { path = "../dprint-formatter" }
rust-formatter = { path = "../rust-formatter" }
ruff-formatter = { path = "../ruff-formatter" }
kotlin-formatter = { path = "../kotlin-formatter" }
lua-formatter = { path = "../lua-formatter" }
sh-formatter = { path = "../sh-formatter" }
fama-common = { path = "../fama-common" }
ignore = "0.4"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "fama"
path = "src/main.rs"
