[package]
name = "dockerfile"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dockerfile"
crate-type = ["rlib"]

[dependencies]
fama-common = { path = "../../common" }
dprint-plugin-dockerfile = { git = "https://github.com/dprint/dprint-plugin-dockerfile.git" }
dprint-core = "0.65"
