[package]
name = "dprint"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
fama-common = { path = "../../common" }

dprint-plugin-markdown = "0.20"
dprint-core = "0.67"
pretty_yaml = "0.6"
anyhow = "1.0"
malva = "0.10"

# Note: CSS formatting now uses Malva crate instead of dprint-plugin-css
# Malva is a native Rust formatter that supports CSS, SCSS, Sass, and Less
