[package]
name = "ruff"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ruff"
crate-type = ["rlib"]

[dependencies]
fama-common = { path = "../../common" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git" }
ruff_formatter = { git = "https://github.com/astral-sh/ruff.git" }
